// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcOptionCard > renders properly with the required title prop 1`] = `
<div
  class="ec-option-card"
  data-test="ec-option-card"
>
  
  <span
    data-test="ec-option-card__title-img"
  >
    <!--v-if-->
    <p
      class="ec-option-card__title"
      data-test="ec-option-card__title"
    >
      Test Option Card
    </p>
  </span>
  <!--v-if-->
  
</div>
`;

exports[`EcOptionCard > renders the Option Card disabled and with the classes related to the type "accent" when type prop is set to accent and isDisabled prop is set to true 1`] = `
<div
  class="ec-option-card ec-option-card--disabled ec-option-card--accent"
  data-test="ec-option-card ec-option-card--disabled ec-option-card--accent"
>
  
  <span
    data-test="ec-option-card__title-img"
  >
    <svg
      alt="Test option card with Icon and caption"
      class="ec-icon ec-option-card__icon ec-option-card__icon--disabled ec-option-card__icon--accent"
      data-test="ec-option-card__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-eye"
      />
    </svg>
    <p
      class="ec-option-card__title"
      data-test="ec-option-card__title"
    >
      Test option card with Icon and caption
    </p>
  </span>
  <p
    class="ec-option-card__caption ec-option-card__caption--disabled ec-option-card__caption--accent"
    data-test="ec-option-card__caption"
  >
    Test Caption
  </p>
  
</div>
`;

exports[`EcOptionCard > renders the Option Card disabled and with the classes related to the type "danger" when type prop is set to accent and isDisabled prop is set to true 1`] = `
<div
  class="ec-option-card ec-option-card--disabled ec-option-card--danger"
  data-test="ec-option-card ec-option-card--disabled ec-option-card--danger"
>
  
  <span
    data-test="ec-option-card__title-img"
  >
    <svg
      alt="Test option card with Icon and caption"
      class="ec-icon ec-option-card__icon ec-option-card__icon--disabled"
      data-test="ec-option-card__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-eye"
      />
    </svg>
    <p
      class="ec-option-card__title"
      data-test="ec-option-card__title"
    >
      Test option card with Icon and caption
    </p>
  </span>
  <p
    class="ec-option-card__caption ec-option-card__caption--disabled"
    data-test="ec-option-card__caption"
  >
    Test Caption
  </p>
  
</div>
`;

exports[`EcOptionCard > renders the Option Card disabled if the isDisabled prop is set to true 1`] = `
<div
  class="ec-option-card ec-option-card--disabled"
  data-test="ec-option-card ec-option-card--disabled"
>
  
  <span
    data-test="ec-option-card__title-img"
  >
    <svg
      alt="Test option card with Icon and caption"
      class="ec-icon ec-option-card__icon ec-option-card__icon--disabled"
      data-test="ec-option-card__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-eye"
      />
    </svg>
    <p
      class="ec-option-card__title"
      data-test="ec-option-card__title"
    >
      Test option card with Icon and caption
    </p>
  </span>
  <p
    class="ec-option-card__caption ec-option-card__caption--disabled"
    data-test="ec-option-card__caption"
  >
    Test Caption
  </p>
  
</div>
`;

exports[`EcOptionCard > renders the Option Card with slot 1`] = `
<div
  class="ec-option-card"
  data-test="ec-option-card"
>
  
  Some slot 
  <div>
    some text
  </div>
  
</div>
`;

exports[`EcOptionCard > should render the Option card with the classes related to the type "accent" when type prop is set 1`] = `
<div
  class="ec-option-card ec-option-card--accent"
  data-test="ec-option-card ec-option-card--accent"
>
  
  <span
    data-test="ec-option-card__title-img"
  >
    <svg
      alt="Test title"
      class="ec-icon ec-option-card__icon ec-option-card__icon--accent"
      data-test="ec-option-card__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-info"
      />
    </svg>
    <p
      class="ec-option-card__title"
      data-test="ec-option-card__title"
    >
      Test title
    </p>
  </span>
  <p
    class="ec-option-card__caption ec-option-card__caption--accent"
    data-test="ec-option-card__caption"
  >
    Test Caption
  </p>
  
</div>
`;

exports[`EcOptionCard > should render the Option card with the classes related to the type "danger" when type prop is set 1`] = `
<div
  class="ec-option-card ec-option-card--danger"
  data-test="ec-option-card ec-option-card--danger"
>
  
  <span
    data-test="ec-option-card__title-img"
  >
    <svg
      alt="Test title"
      class="ec-icon ec-option-card__icon ec-option-card__icon--danger"
      data-test="ec-option-card__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-info"
      />
    </svg>
    <p
      class="ec-option-card__title"
      data-test="ec-option-card__title"
    >
      Test title
    </p>
  </span>
  <p
    class="ec-option-card__caption ec-option-card__caption--danger"
    data-test="ec-option-card__caption"
  >
    Test Caption
  </p>
  
</div>
`;
